# ProjectDeadline

./: .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  Pipfile  README.md  build.sh  dodo.py  game_logic.py  pyproject.toml
Deadline/: __init__.py  cli.py  game.py  game_config.json  game_config_test.json  game_logic.py  localization.py  main.py  network.py  scene.py
Deadline/po/ru_RU.UTF-8/LC_MESSAGES/: Deadline.po
dev/: make_game_config.py
docs/sphinx/: API.rst  Deadline.rst  GUI.rst  Rules.rst  conf.py  index.rst  modules.rst
po/ru_RU.UTF-8/LC_MESSAGES/: Deadline.po
tests/: test_game_logic.py  test_network.py
