[project]
name = "Deadline"
version = "0.0"
description = "Deadline is a card game about time management under the onslaught of endless tasks."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Anenokil", email = "anenokil@msu.ru" },
    { name = "dvarfe", email = "dvarfe@msu.ru" },
    { name = "ZSTRANNICK", email = "ZSTRANNICK@msu.ru" },

]

keywords = ["game", "multiplayer", "card"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["pygame-ce", "ansicolors"]

[project.urls]
repository = "https://github.com/Anenokil/PythonProject-PreciousSource"

[project.gui-scripts]
Deadline = "Deadline.main:main_gui"

[build-system]
requires = [
    "doit",
    "sphinx",
    "flake8",
    "pydocstyle",
    "wheel",
    "setuptools",
    "babel",
    "build",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
Deadline = "Deadline"

[tool.setuptools.package-data]
Deadline = ["po/*/*/*.mo"]
